fix header overflow issue

--- a/styles.css
+++ b/styles.css
@@ -34,17 +34,24 @@ ul {
 
 /* Header css */
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
+  width: 100vw;
   position: fixed;
   z-index: 10;
   top: 0;
-  padding: 0 30px;
+  right: 0;
+  left: 0;
   height: 65px;
   box-shadow: 0 0 10px rgb(0 0 0 / 10%);
   background-color: #fff;
+  display: flex;
+  align-items: center;
+}
+.header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+  width: 100%;
 }
 .header__logo {
   border: 4px solid var(--gray);
@@ -54,20 +61,23 @@ ul {
 .menu {
   display: flex;
   align-items: center;
-  width: 33%;
+  /* flex: 1;
+  margin-right: 0;
+  margin-left: auto; */
+  /* width: 33%; */
 }
 .menu__listItem {
   list-style-type: none;
   padding: 20px;
 }
-.navLink {
+.menuLink {
   color: var(--black);
   text-decoration: none;
   padding: 10px 0px;
   font-size: 1rem;
   font-weight: 600;
 }
-.navLink:hover {
+.menuLink:hover {
   border-bottom: 2px solid #fec77c;
   color: #fec77c;
   transition: 0.5s;
@@ -179,11 +189,12 @@ ul {
   background-color: #ffffff;
   border: 1px solid #d4d4d4;
   margin-right: 0;
-  max-width: 450px;
+  max-width: 420px;
   padding: 18px;
   border-radius: 3px;
   position: relative;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  width: 40%;
 }
 
 /* .inner__card:before {
@@ -389,6 +400,8 @@ ul {
   }
   .inner__card {
     margin: 25px 10px;
+    width: auto;
+    /* width: 100%; */
   }
   .aboutMe__contentWrapper {
     flex-direction: column;
